--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -29,13 +29,13 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <button class="btn btn-success" 
+                        <button style="margin: 3px;" class="btn btn-success" 
                         type="submit" [disabled]="!f.valid" >{{editMode ? 'Update' :'Add'}}</button>
-                        <button class="btn btn-danger"
+                        <button style="margin: 5px;" class="btn btn-danger"
                          type="button" 
                          (click)="onDelete()"
                          *ngIf = "editMode"> Delete </button>
-                        <button class="btn btn-primary" type="button" (click)="onClear()"> Clear </button>
+                        <button style="margin: 3px;" class="btn btn-primary" type="button" (click)="onClear()"> Clear </button>
                     </div>
                 </div>
             </div>
