--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,17 +1,36 @@
 <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-        <form>
+        <div class="alert alert-danger" *ngIf="error">
+            <p>{{ error }}</p>
+        </div>
+        <div *ngIf="isLoading" style="text-align: center;">
+            <app-loading-spinner></app-loading-spinner>
+        </div>
+        <form #authform="ngForm" (ngSubmit)="onSubmit(authform)" *ngIf="!isLoading">
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" class="form-control">
+                <input type="email" 
+                id="email" 
+                class="form-control"
+                ngModel
+                name="email"
+                required 
+                email
+                />
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" class="form-control">
+                <input type="password" 
+                id="password" 
+                class="form-control"
+                ngModel
+                name="password"
+                required
+                minlength="6"/>
             </div>
             <div>
-                <button class="btn btn-primary">Sign Up</button> | 
-                <button class="btn btn-primary">Switch to Login</button>
+                <button class="btn btn-primary" type="submit" [disabled]="!authform.valid">{{ isLoginMode ? 'Log In': 'Sign Up' }}</button> | 
+                <button class="btn btn-primary" (click)="onSwitchMode()" type="button">Switch to {{isLoginMode ? 'Sign Up': 'Log In'}}</button>
             </div>
         </form>
     </div>
